--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
-# export-env-var
+= export-env-var
+
 Set and export environment variable in bash. The resulting environment variable value will be persistent across all the following job steps.
 
 Step syntax:
